# zero_twenty_fifty

./: .gitignore  404.html  Dockerfile  README.md  create_super_user.py  index.html  main.py  migrate.py  mkdocs.yml  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: app.yml  publish_docs.yml
MIGRATIONS/: index.html
POSTGRES_LOCAL_DOCKER_SETUP/: index.html
TESTING_FROM_CLI/: index.html
alembic/: env.py
alembic/versions/: 1a69295f277f_initialise_base_database_structure.py  43b20f3cc4b4_initialise_base_database_structure.py  58f19222c427_initialise_base_database_structure.py  a125a4e7f751_initialise_base_db_structure.py  e5a9faa313d1_initialise_base_database_structure.py  ffba7564d918_initialise_base_database_structure.py
apis/: base.py
apis/version1/: route_events.py  route_login.py  route_openid_discovery.py  route_product_footprints.py  route_users.py
core/: app_config.py  auth_config.py  config.py  error_responses.py  exceptions.py  hashing.py  logger.py  oauth2_client_credentials.py  pagination.py  security.py
db/: base.py  base_class.py  session.py
db/models/: carbon_footprint.py  product_footprint.py  user.py
db/repository/: login.py  product_footprints.py  users.py
docs/: MIGRATIONS.md  POSTGRES_LOCAL_DOCKER_SETUP.md  TESTING_FROM_CLI.md  generate_product_footprints.py  valid_test_product_footprint.json
frontend/: app.vue  nuxt.config.ts  package-lock.json  package.json
frontend/components/: AppAlert.vue  AppFooter.vue  AppHeader.vue  AuthForm.vue  FootprintDetails.vue  FootprintForm.vue  FootprintList.vue
frontend/composables/: useAuth.ts  useFootprints.ts
frontend/pages/: about.vue  (+2 more)
jsonschema/: carbon_footprint.json  product_footprint.json
schemas/: base_types.py  carbon_footprint.py  product_footprint.py  token.py  user.py
search/: search_index.json
tests/: conftest.py
(+29 files in other folders)
