[tool.poetry]
name = "zerotwentyfifty"
version = "0.1.0"
description = ""
authors = ["JohnVonNeumann <18162779+JohnVonNeumann@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi-pagination = "^0.12.4"
fastapi = {version = "0.99.1", extras = ["all"]}
SQLAlchemy = "^1.4.41"
pydantic = {extras = ["email"], version = "1.10.11"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
sqlmodel = "^0.0.8"
jinja2 = "^3.1.2"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
pycountry = "^22.3.5"
urnparse = "^0.2.0"
uvicorn = "^0.23.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
