[tool.poetry]
name = "zerotwentyfifty"
version = "0.1.0"
description = ""
authors = ["JohnVonNeumann <18162779+JohnVonNeumann@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi-pagination = "^0.12.19"
fastapi = {version = "0.110.0", extras = ["all"]}
SQLAlchemy = "^1.4.41"
pydantic = {extras = ["email"], version = "2.6.3"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
jinja2 = "^3.1.2"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
pycountry = "^23.12.11"
urnparse = "^0.2.0"
uvicorn = "^0.27.1"
bump-pydantic = "^0.8.0"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^24.3.0"
isort = "^5.12.0"
pytest-env = "^1.1.3"
datamodel-code-generator = "^0.25.4"
flake8 = "^7.0.0"
pytest-cov = "^4.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
